Fetch api url to the laptop select div

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
         <div class="item">
             <h1>Laptops</h1>
-            <select name="laptops" id="laptops"></select>
+            <select id="laptops"></select>
         </div>
         <div class="item" id="item4"></div>
       
