rewriting the fecthing function from the regular form to the arrow function

--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         <div class="item">
             <h1>Laptops</h1>
             <select id="laptops"></select>
+            <span id="laptop_decription"></span>
         </div>
         <div class="item" id="item4"></div>
       
