Implement span div text change based on dropdown selected

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 
         <div class="item">
             <h1>Laptops</h1>
-            <select id="laptops"></select>
-            <span id="laptop_decription"></span>
+            <div><select id="laptops"></select></div>
+            <div><span id="laptop_decription"></span></div>
         </div>
         <div class="item" id="item4"></div>
       
