--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
         <div class="item">
             <h1>Laptops</h1>
             <div><select id="laptops"></select></div>
+            <div><h3>Features</h3></div>
             <div><span id="laptop_decription"></span></div>
         </div>
         <div class="item" id="item4"></div>
