Add laptop image

--- a/index.html
+++ b/index.html
@@ -124,7 +124,12 @@
             <div><h3>Features</h3></div>
             <div><span id="laptop_decription"></span></div>
         </div>
-        <div class="item" id="item4"></div>
+        <div class="item" id="item4">
+            <div id="image-container">
+                <img id="laptop_image" height="177px" width="248px" alt="The image is not available for the selected laptop">
+                <span id="laptops_title"></span>
+            </div>
+        </div>
       
     </main>
     <script src="app.js"></script>
